--- a/Telegram-Mac/TGAboutWindow.storyboard
+++ b/Telegram-Mac/TGAboutWindow.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14490.70"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="16097"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,11 +13,10 @@
                     <window key="window" title="About Telegram" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" hidesOnDeactivate="YES" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="none" frameAutosaveName="" titleVisibility="hidden" id="aS8-cw-954" customClass="TGAboutWindow" customModule="Telegram" customModuleProvider="target">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
                         <windowCollectionBehavior key="collectionBehavior" fullScreenAuxiliary="YES"/>
-                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="245" y="301" width="328" height="270"/>
+                        <rect key="contentRect" x="245" y="301" width="320" height="240"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
-                        <value key="minSize" type="size" width="328" height="270"/>
-                        <value key="maxSize" type="size" width="328" height="270"/>
+                        <value key="minSize" type="size" width="320" height="240"/>
+                        <value key="maxSize" type="size" width="320" height="240"/>
                         <connections>
                             <outlet property="delegate" destination="4IT-0F-a13" id="bEo-h0-miV"/>
                         </connections>
@@ -35,17 +34,17 @@
             <objects>
                 <viewController showSeguePresentationStyle="single" id="iy1-iR-ByA" customClass="TGAboutViewController" customModule="Telegram" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="o0x-fS-ZFt">
-                        <rect key="frame" x="0.0" y="0.0" width="314" height="247"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="240"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UNb-tG-O6e">
-                                <rect key="frame" x="123" y="157" width="70" height="70"/>
+                                <rect key="frame" x="125" y="150" width="70" height="70"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Mif-HA-K2L"/>
+                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="AppIcon" id="Mif-HA-K2L"/>
                             </imageView>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uoh-fZ-hcn">
-                                <rect key="frame" x="122" y="128" width="72" height="21"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                                <rect key="frame" x="124" y="119" width="72" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Telegram" id="aqa-g8-PkV">
                                     <font key="font" metaFont="systemBold" size="14"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -53,32 +52,32 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IPB-WT-oMo">
-                                <rect key="frame" x="28" y="20" width="260" height="28"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                                <rect key="frame" x="15" y="20" width="289" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" id="oKE-Kn-Sj8">
-                                    <font key="font" metaFont="smallSystem"/>
-                                    <string key="title">Copyright © 2019 TELEGRAM MESSENGER LLP.
+                                    <font key="font" metaFont="miniSystem"/>
+                                    <string key="title">Copyright © 2016–2020 TELEGRAM MESSENGER LLP.
 All rights reserved.</string>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g12-WR-g1L">
-                                <rect key="frame" x="103" y="67" width="109" height="19"/>
+                                <rect key="frame" x="105" y="58" width="109" height="19"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="roundRect" title="Copy to Clipboard" bezelStyle="roundedRect" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="jkx-4l-Bvo">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="smallSystem"/>
+                                    <font key="font" metaFont="menu" size="11"/>
                                 </buttonCell>
                                 <connections>
                                     <action selector="copyButtonClicked:" target="iy1-iR-ByA" id="qOf-IX-dv2"/>
                                 </connections>
                             </button>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7wx-9O-ZxV">
-                                <rect key="frame" x="87" y="94" width="141" height="28"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                                <rect key="frame" x="89" y="87" width="141" height="28"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" id="P7E-x4-hJQ">
-                                    <font key="font" metaFont="smallSystem"/>
+                                    <font key="font" metaFont="menu" size="11"/>
                                     <string key="title">Version 5.0.1 (123456)
 Mac App Store</string>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -88,13 +87,17 @@ Mac App Store</string>
                         </subviews>
                     </view>
                     <connections>
-                        <outlet property="appIconImageView" destination="UNb-tG-O6e" id="6f3-nn-6gG"/>
+                        <outlet property="copyVersionButton" destination="g12-WR-g1L" id="2oR-75-h3F"/>
+                        <outlet property="copyrightNoticeLabel" destination="IPB-WT-oMo" id="Zgs-ud-kZf"/>
                         <outlet property="versionLabel" destination="7wx-9O-ZxV" id="Tdz-bV-kc5"/>
                     </connections>
                 </viewController>
                 <customObject id="9H5-yz-bWK" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-142" y="500.5"/>
+            <point key="canvasLocation" x="-142" y="500"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="AppIcon" width="512" height="512"/>
+    </resources>
 </document>
