--- a/Telegram-Mac/TGPreferences.storyboard
+++ b/Telegram-Mac/TGPreferences.storyboard
@@ -70,12 +70,12 @@
             <objects>
                 <viewController title="General" id="1mg-yK-kGp" customClass="TGGeneralPreferencesViewController" customModule="Telegram" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="Cnt-d8-mYe">
-                        <rect key="frame" x="0.0" y="0.0" width="619" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="619" height="330"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2vO-s5-nOy">
-                                <rect key="frame" x="18" y="263" width="247" height="17"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                                <rect key="frame" x="18" y="293" width="247" height="17"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="right" title="Message Sending:" id="HkN-Ba-hzG">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -83,8 +83,8 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oQb-dN-WKO">
-                                <rect key="frame" x="18" y="207" width="247" height="17"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                                <rect key="frame" x="18" y="237" width="247" height="17"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="right" title="Show:" id="Jmz-v0-ye9">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -92,8 +92,8 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sgp-7c-KE6">
-                                <rect key="frame" x="18" y="167" width="247" height="17"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                                <rect key="frame" x="18" y="197" width="247" height="17"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="right" title="Emoji:" id="MEi-MZ-032">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -101,9 +101,18 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lHO-Ou-M6R">
-                                <rect key="frame" x="18" y="127" width="247" height="17"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                                <rect key="frame" x="18" y="157" width="247" height="17"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="right" title="Play:" id="Rwc-r3-oP9">
+                                    <font key="font" usesAppearanceFont="YES"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9lc-QP-z07">
+                                <rect key="frame" x="18" y="125" width="247" height="17"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" alignment="right" title="Behavior:" id="zwd-iH-EiO">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -111,7 +120,7 @@
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nnZ-aG-tl1">
                                 <rect key="frame" x="18" y="94" width="247" height="17"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="right" title="Force Touch a Message:" id="Lab-PX-CK6">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -120,7 +129,7 @@
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ebT-WE-93h">
                                 <rect key="frame" x="18" y="20" width="247" height="17"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="right" title="Instant View:" id="ZSm-0t-Q4A">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -128,7 +137,7 @@
                                 </textFieldCell>
                             </textField>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1FL-it-VIR">
-                                <rect key="frame" x="270" y="262" width="139" height="18"/>
+                                <rect key="frame" x="270" y="292" width="139" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="radio" title="Use Return to send" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="6xn-zw-Hca">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -139,7 +148,7 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" tag="1" translatesAutoresizingMaskIntoConstraints="NO" id="QZ0-Yh-DZS">
-                                <rect key="frame" x="270" y="240" width="207" height="18"/>
+                                <rect key="frame" x="270" y="270" width="207" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="radio" title="Use Command-Return to send" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="y5y-E1-Hkb">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -183,58 +192,69 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zn0-h0-G4e">
-                                <rect key="frame" x="269" y="206" width="220" height="18"/>
+                                <rect key="frame" x="269" y="236" width="220" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="check" title="Stickers, GIFs, and Emoji sidebar" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="iBv-Y4-Edg">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="showSidebarChanged:" target="1mg-yK-kGp" id="g0H-mu-ryf"/>
+                                    <action selector="showSidebarToggled:" target="1mg-yK-kGp" id="t2P-r2-O8y"/>
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pvE-7A-zDe">
-                                <rect key="frame" x="269" y="186" width="75" height="18"/>
+                                <rect key="frame" x="269" y="216" width="75" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="check" title="Calls tab" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="OF0-cm-NzL">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="showCallsTabChanged:" target="1mg-yK-kGp" id="0MZ-qg-MzJ"/>
+                                    <action selector="showCallsTabToggled:" target="1mg-yK-kGp" id="Idk-e1-EWP"/>
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tpD-RX-elX">
-                                <rect key="frame" x="269" y="166" width="219" height="18"/>
+                                <rect key="frame" x="269" y="196" width="219" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="check" title="Automatically replace emoticons" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="eiz-Dy-pKW">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="autoReplaceEmoticonsChanged:" target="1mg-yK-kGp" id="XzI-HA-BRl"/>
+                                    <action selector="autoReplaceEmoticonsToggled:" target="1mg-yK-kGp" id="Xa9-Z8-Sb1"/>
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="41p-v8-H2j">
-                                <rect key="frame" x="269" y="146" width="185" height="18"/>
+                                <rect key="frame" x="269" y="176" width="185" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="check" title="Suggest emoji while typing" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="JgY-Zr-t5P">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="suggestEmojiWhileTypingChanged:" target="1mg-yK-kGp" id="4K0-3h-KrY"/>
+                                    <action selector="suggestEmojiWhileTypingToggled:" target="1mg-yK-kGp" id="38f-lr-cgO"/>
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lBs-yO-Hgr">
-                                <rect key="frame" x="269" y="126" width="110" height="18"/>
+                                <rect key="frame" x="269" y="156" width="110" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="check" title="In-app sounds" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="0Sq-Mm-Xb7">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="playInAppSoundsChanged:" target="1mg-yK-kGp" id="Mti-Mq-Tq8"/>
+                                    <action selector="playInAppSoundsToggled:" target="1mg-yK-kGp" id="Exc-8H-PBi"/>
+                                </connections>
+                            </button>
+                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vwL-qI-RcJ" userLabel="Preserve Formatting When Copying Checkbox">
+                                <rect key="frame" x="269" y="125" width="230" height="18"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <buttonCell key="cell" type="check" title="Preserve formatting when copying" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="lAy-cp-uDy">
+                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="preserveFormattingWhenCopyingToggled:" target="1mg-yK-kGp" id="scL-fh-Gbz"/>
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kBJ-Vx-3eq">
@@ -245,7 +265,7 @@
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="scrollInstantViewWithSpacebarChanged:" target="1mg-yK-kGp" id="1I7-fX-itc"/>
+                                    <action selector="scrollInstantViewWithSpacebarToggled:" target="1mg-yK-kGp" id="J3h-JR-KPL"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -258,6 +278,7 @@
                         <outlet property="messageSendingCmdReturnRadio" destination="QZ0-Yh-DZS" id="oW6-eW-zaI"/>
                         <outlet property="messageSendingReturnRadio" destination="1FL-it-VIR" id="NAN-lA-QJr"/>
                         <outlet property="playInAppSoundsCheckbox" destination="lBs-yO-Hgr" id="rx2-BU-8S4"/>
+                        <outlet property="preserveFormattingWhenCopyingCheckbox" destination="vwL-qI-RcJ" id="6S6-Ow-HKp"/>
                         <outlet property="scrollInstantViewWithSpacebarCheckbox" destination="kBJ-Vx-3eq" id="ceg-Yo-6Wk"/>
                         <outlet property="showCallsTabCheckbox" destination="pvE-7A-zDe" id="VVE-lt-TAX"/>
                         <outlet property="showSidebarCheckbox" destination="zn0-h0-G4e" id="9Su-aE-igY"/>
@@ -266,7 +287,7 @@
                 </viewController>
                 <customObject id="cp2-En-4AU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="31.5" y="615"/>
+            <point key="canvasLocation" x="32" y="630"/>
         </scene>
         <!--Notifications-->
         <scene sceneID="zlA-S9-6Rh">
